--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <!-- end of bottom right navigation-->
        
         <!-- bottom menu slider-->
-        <footer class="Projects">
+        <div class="Projects">
             <a href="https://s3.amazonaws.com/davedalimocon.designs/index.html" target="_blank">
             <div style="word-wrap: break-word;" > <p>Collection of art works</p>
                 <img src="Designs-Cover.jpg" alt="design-project" width="295" height="150"/>
@@ -154,10 +154,8 @@
             <div>3.</div>
             <div>4.</div>
 
-        </footer>
+            </div>
         <!-- end of bottom menu slider-->
     
-        </main>
-        <footer><small>davedalimocon@gmail.com</small></footer>
     </body>
 </html>
