--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 
         <!-- Main Content -->
         <div class="invoker">
-            <img src="Invoker.png" alt="Invoker" />
+        
+            <img src="Invoker.webp" alt="Invoker" />
         </div>
         <div class="container" >
             <div class="icon">
